syntax = "proto3";

option go_package = "../gen;authv1";

service Auth {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc ActivateAccount(ActivateAccountRequest) returns (ActivateAccountResponse);
    rpc Refresh(RefreshRequest) returns (RefreshResponse);
    rpc Verify(VerifyRequest) returns (VerifyResponse);
    rpc SendPasswordLink(SendPasswordLinkRequest) returns (SendPasswordLinkResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message LoginRequest {
    string username=1;
    string email=2;
    string password=3;
}

message LoginResponse {
    string access_token=1;
    string refresh_token=2;
}

message RegisterRequest {
    string username=1;
    string email=2;
    string password=3;
}

message RegisterResponse {
    bool success = 1;
}

message LogoutRequest {
    string refresh_token=1;
}

message LogoutResponse {
    bool success = 1;
}

message ActivateAccountRequest {
    string link=1;
}

message ActivateAccountResponse {
    bool success = 1;
}

message RefreshRequest {
    string refresh_token=1;
}

message RefreshResponse {
    string access_token=1;
    string refresh_token=2;
}

message VerifyRequest {
    string access_token=1;
}

message VerifyResponse {
    bool verified=1;
}

message SendPasswordLinkRequest {
    string email=1;
}

message SendPasswordLinkResponse {
    bool success = 1;
}

message ChangePasswordRequest {
    string link=1;
    string password=2;
}

message ChangePasswordResponse {
    bool success = 1;
}